uptime-kuma/mongodb.yaml

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: uptime
spec:
  serviceName: mongodb
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: friggacloudlabs/mongo:7.0-rc
        ports:
        - containerPort: 27017
        resources:
          requests:
            memory: "64Mi"
            cpu: "25m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        volumeMounts:
        - name: mongodb-data
          mountPath: /data/db
      nodeSelector:
        size: cr-28           
        intent: frigga
      
  volumeClaimTemplates:
  - metadata:
      name: mongodb-data
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: uptime
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017

# endpoint: mongodb://mongodb.uptime.svc.cluster.local:27017/
