uptime-kuma/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-ir
  namespace: uptime
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`uptime.frigga.cloud`)
      kind: Rule
      services:
        - name: uptimekuma
          port: 80
  tls:
    certResolver: letsencrypt-prod
